# Parallels

./: CMakeLists.txt  Makefile  README.md  lab4.py  main.c  main.cpp
lab3.1/: CMakeLists.txt  lab31.xlsx  task_1.cpp
lab3.2/: CMakeLists.txt  Makefile  task_2.cpp
task_1/: CMakeLists.txt  Makefile  parallel.xlsx  task_1.c
task_2/: CMakeLists.txt  Makefile  parallel2.xlsx  task_2.c
task_3/: CMakeLists.txt  Makefile  parallel3.xlsx  task_3.cpp
